--- a/utils/Makefile
+++ b/utils/Makefile
@@ -1,10 +1,10 @@
-all: test
+all: convert_to_fits
 
 oims.o: oims.cpp oims.hpp
 	g++ -c -o oims.o oims.cpp
 
-test.o: test.cpp
-	g++ -c -o test.o -I/opt/homebrew/include/ test.cpp
+convert_to_fits.o: convert_to_fits.cpp
+	g++ -c -o convert_to_fits.o -I/opt/homebrew/include/ convert_to_fits.cpp
 
-test: test.o oims.o
-	g++ -o test test.o oims.o -L/opt/homebrew/lib/ -lcfitsio
+convert_to_fits: convert_to_fits.o oims.o
+	g++ -o convert_to_fits convert_to_fits.o oims.o -L/opt/homebrew/lib/ -lcfitsio
