--- a/.gitignore
+++ b/.gitignore
@@ -6,8 +6,10 @@ __pycache__/
 *.py[cod]
 *$py.class
 
-# C extensions
+# C extensions/utilities
 *.so
+*.o
+utils/convert_to_fits
 
 # Distribution / packaging
 .Python
