--- a/wideband-imager.service
+++ b/wideband-imager.service
@@ -1,11 +1,11 @@
 [Unit]
-Description=ADP Wideband Imager Server
+Description=NDP Wideband Imager Server
 After=network-online.target
 Wants=network-online.target
 
 [Service]
 # Run as the specified user
-User=jdowell
+User=ndp
 
 # Allow unlimited locked memory
 LimitMEMLOCK=infinity
@@ -18,22 +18,14 @@ TimeoutStopSec=20
 ExecStartPre=/bin/bash -c '[ -d /data/orville/log ] || mkdir -p /data/orville/log'
 
 # Setup the environment
-Environment=BIFROST_INCLUDE_PATH=/home/jdowell/orville3/bifrost/src/bifrost
-Environment=LD_LIBRARY_PATH=/usr/local/cuda/lib64:/home/jdowell/orville3/bifrost/lib:$LD_LIBRARY_PATH
-Environment=PYTHONPATH=/home/jdowell/orville3/bifrost/python:$PYTHONPATH
-
-#Environment=LD_PRELOAD=libvma.so
-Environment=VMA_TRACELEVEL=0
-Environment=VMA_RX_POLL=1000
-Environment=VMA_INTERNAL_THREAD_AFFINITY=0
-Environment=VMA_RX_PREFETCH_BYTES=128
-Environment=VMA_THREAD_MODE=0
-Environment=VMA_MTU=9000 
+Environment=BIFROST_INCLUDE_PATH=/home/ndp/orville3/bifrost/src/bifrost
+Environment=LD_LIBRARY_PATH=/usr/local/cuda/lib64:/home/ndp/orville3/bifrost/lib:$LD_LIBRARY_PATH
+Environment=PYTHONPATH=/home/ndp/orville3/bifrost/python:$PYTHONPATH
 
 ExecStart=/bin/bash -ec '\
 numactl --cpunodebind=0 --membind=0 -- \
-python3 /home/jdowell/orville3/orville_imager.py \
-   --flagfile   /home/jdowell/orville3/bad_freq.txt \
+python3 /home/ndp/orville3/orville_imager.py \
+   --flagfile   /home/ndp/orville3/bad_freq.txt \
 	 --logfile    /data/orville/log/wideband-imager.log \
 	 --output-dir /data/orville'
 
