--- a/wideband-imager.service
+++ b/wideband-imager.service
@@ -25,7 +25,8 @@ Environment=PYTHONPATH=/home/jdowell/orville3/bifrost/python:$PYTHONPATH
 ExecStart=/bin/bash -ec '\
 python3 /home/jdowell/orville3/orville_imager.py \
 	 --logfile    /data/orville/log/wideband-imager.log \
-	 --output-dir /data/orville'
+	 --output-dir /data/orville \
+	 --freq-save  30~50'
 
 [Install]
 WantedBy=multi-user.target
