--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,7 +34,8 @@ jobs:
             numpy \
             matplotlib \
             scipy \
-            h5py 
+            h5py \
+            tqdm
           python -m pip install git+https://github.com/lwa-project/lsl.git
           python -m pip install pylint
       - name: Test
