--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,7 +31,7 @@ jobs:
         run: |
           python -m pip install \
             setuptools \
-            numpy \
+            "numpy<2" \
             matplotlib \
             scipy \
             h5py
