--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,8 +34,8 @@ jobs:
             "numpy<2" \
             matplotlib \
             scipy \
-            h5py
-          python -m pip install git+https://github.com/lwa-project/lsl.git
+            h5py \ 
+            lsl
           python -m pip install pylint
       - name: "Build and Install"
         run: python -m pip install .
