--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,6 +22,7 @@ jobs:
             git \
             libfftw3-dev \
             libgdbm-dev \
+            libgsl-dev \
             pkg-config \
       - uses: actions/setup-python@v2
         with:
